--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "neuromap",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Plataforma inovadora apoia alunos com características individuais, como TDAH, Dislexia e Síndrome de Asperger, para atingirem seu potencial máximo no percurso acadêmico, oferecendo uma experiência de aprendizado inclusiva e personalizada.",
+  "main": "/app/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "oracledb": "^6.1.0",
+    "sequelize": "^6.33.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  }
 }
