--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "oracledb": "^6.1.0",
+    "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
